force-app/main/default/objects/RTX6000_DR_Settings__c/RTX6000_DR_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>SDS-2727: RTX6k Active Upsell Program</description>
    <label>RTX6000 : DR : Settings</label>
</CustomObject>