force-app/main/default/objects/RTX6000_DR_Settings__c/fields/EMEA__c.field-meta.xml
<CustomField>
    <fullName>EMEA__c</fullName>
    <description>Channel Approver for EMEA</description>
    <inlineHelpText>Channel Approver for EMEA</inlineHelpText>
    <label>EMEA</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>