force-app/main/default/objects/RTX6000_DR_Settings__c/fields/NALA__c.field-meta.xml
<CustomField>
    <fullName>NALA__c</fullName>
    <description>Channel Approver for NALA</description>
    <inlineHelpText>Channel Approver for NALA</inlineHelpText>
    <label>NALA</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>