force-app/main/default/objects/RTX6000_DR_Settings__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Default Approver if there is no region match</description>
    <inlineHelpText>Default Approver if there is no region match</inlineHelpText>
    <label>Other</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>